<resources>
    <string name="app_name">Taxi Booking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_confirm_location">Confirm Location</string>
    <string name="menu__choose_destination">Choose Destination</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_rating">Rating</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_logout">LogOut</string>

    <string name="yes">Yes</string>
    <string name="no_internet">No internet Connection</string>
    <string name="oops_connect_your_internet">Oops! Connect Your Internet</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_name">Please enter your name</string>
    <string name="hint_email">Please enter your E-mail</string>
    <string name="hint_password">Please enter your password</string>
    <string name="hint_repassword">Please enter your repeat password</string>
    <string name="register_succ">User registered Successfully...</string>
    <string name="register_already">This email is already registered...</string>


    <string name="enter_email">Please enter your E-mail</string>
    <string name="enter_password">Please enter your password</string>


</resources>
