<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_confirm_location"
            android:checked="true"
            android:icon="@drawable/side_home"
            android:title="@string/menu_confirm_location" />
        <item
            android:id="@+id/nav_choose_destination"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu__choose_destination" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/side_help"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/side_help"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/side_star"
            android:title="@string/menu_rating" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/side_faqs"
            android:title="@string/menu_faq" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_logout" />
    </group>

</menu>
