<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_confirm_location">

    <fragment
        android:id="@+id/nav_confirm_location"
        android:name="com.taxibooking.ui.confirm_location.ConfirmLocationFragment"
        android:label="@string/menu_confirm_location"
        tools:layout="@layout/fragment_confirm_location" />

    <fragment
        android:id="@+id/nav_choose_destination"
        android:name="com.taxibooking.ui.choose_destination.ChooseDestinationFragment"
        android:label="@string/menu__choose_destination"
        tools:layout="@layout/fragment_choose_destination" >
        <action
            android:id="@+id/action_nav_choose_destination_to_chooseVehicleFragment"
            app:destination="@id/chooseVehicleFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.taxibooking.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_rating"
        android:name="com.taxibooking.ui.rating.RatingFragment"
        android:label="@string/menu_rating"
        tools:layout="@layout/fragment_rating" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="com.taxibooking.ui.faq.FAQFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_faq" />
    <fragment
        android:id="@+id/chooseVehicleFragment"
        android:name="com.taxibooking.ui.choose_destination.ChooseVehicleFragment"
        android:label="Select Vehicle"
        tools:layout="@layout/fragment_choose_vehicle" >
        <action
            android:id="@+id/action_chooseVehicleFragment_to_paymentFragment"
            app:destination="@id/paymentFragment" />
    </fragment>
    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.taxibooking.ui.choose_destination.PaymentFragment"
        android:label="Payment Method"
        tools:layout="@layout/fragment_payment" />

</navigation>